--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,56 @@
 <h2>Peliculas App</h2>
 <hr>
-<div class="row">
-    <div class="col-md-6"></div>
-    <div class="col-md-6"></div>
+<div class="container">
+    <br>
+    <h2>Cartelera</h2>
+    <hr>
+
+    <div class="row">
+        <div class="col-sm-6">
+
+            <div class="row">
+
+                <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/bfB1J6jsjdGWKjXxKQ5hNd1OyAs.jpg)'}">
+
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-sm-6 div-pic-2" [ngStyle]=" { 'background-image': 'url(http://image.tmdb.org/t/p/w500/bfB1J6jsjdGWKjXxKQ5hNd1OyAs.jpg)'}">
+
+                </div>
+                <div class="col-sm-6 div-pic-2" [ngStyle]=" { 'background-image': 'url(http://image.tmdb.org/t/p/w500/bfB1J6jsjdGWKjXxKQ5hNd1OyAs.jpg)'}">
+
+                </div>
+
+            </div>
+
+
+        </div>
+        <div class="col-sm-6">
+
+            <div class="row">
+
+                <div class="col-sm-6 div-pic-2" [ngStyle]=" { 'background-image': 'url(http://image.tmdb.org/t/p/w500/bfB1J6jsjdGWKjXxKQ5hNd1OyAs.jpg)'}">
+
+                </div>
+                <div class="col-sm-6 div-pic-2" [ngStyle]=" { 'background-image': 'url(http://image.tmdb.org/t/p/w500/bfB1J6jsjdGWKjXxKQ5hNd1OyAs.jpg)'}">
+
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/bfB1J6jsjdGWKjXxKQ5hNd1OyAs.jpg)'}">
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
 </div>
