--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,57 +1,13 @@
 <h2>Peliculas App</h2>
-<hr>
+
 <div class="container">
     <br>
-    <h2>Cartelera</h2>
-    <hr>
 
-    <!-- Mosaicos con imagenes de las peliculas  -->
-    <div class="row" *ngIf="cartelera">
-        <div class="col-sm-6">
-
-            <div class="row">
-
-                <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url('+ ( cartelera[0] | peliculaImagen ) +')'}">
-
-                </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+ ( cartelera[1] | peliculaImagen ) +')'}">
-
-                </div>
-                <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+ ( cartelera[2] | peliculaImagen ) +')'}">
-
-                </div>
-
-            </div>
-
-
-        </div>
-        <div class="col-sm-6">
-
-            <div class="row">
-
-                <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+ ( cartelera[3] | peliculaImagen ) +')'}">
-
-                </div>
-                <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+ ( cartelera[4] | peliculaImagen ) +')'}">
-
-                </div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url('+ ( cartelera[5] | peliculaImagen ) +')'}">
-
-                </div>
-
-            </div>
-
-        </div>
-    </div>
+    <!-- Mandando data al componente solo las primeras 6 peliculas-->
+    <app-mosaico [peliculas]="cartelera | slice:0:6" titulo="Peliculas en cartelera"></app-mosaico>
+    <br>
+    <app-mosaico [peliculas]="populares | slice:0:6" titulo="Populares"></app-mosaico>
+    <br>
+    <app-mosaico [peliculas]="popularesKids | slice:0:6" titulo="Populares entre los niños"></app-mosaico>
 
 </div>
