--- a/src/app/components/home/mosaico.component.html
+++ b/src/app/components/home/mosaico.component.html
@@ -8,7 +8,7 @@
 
         <div class="row">
 
-            <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url('+ ( peliculas[0] | peliculaImagen ) +')'}">
+            <div class="col-md-12 div-pic-1 puntero" [routerLink]="['/pelicula', peliculas[0].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[0] | peliculaImagen ) +')'}">
 
             </div>
 
@@ -16,11 +16,11 @@
 
         <div class="row">
 
-            <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+ ( peliculas[1] | peliculaImagen ) +')'}">
+            <div class="col-sm-6 div-pic-2 puntero" [routerLink]="['/pelicula', peliculas[1].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[1] | peliculaImagen ) +')'}">
 
             </div>
 
-            <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+ ( peliculas[2] | peliculaImagen ) +')'}">
+            <div class="col-sm-6 div-pic-2 puntero" [routerLink]="['/pelicula', peliculas[2].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[2] | peliculaImagen ) +')'}">
 
             </div>
 
@@ -32,11 +32,11 @@
 
         <div class="row">
 
-            <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+ ( peliculas[3] | peliculaImagen ) +')'}">
+            <div class="col-sm-6 div-pic-2 puntero" [routerLink]="['/pelicula', peliculas[3].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[3] | peliculaImagen ) +')'}">
 
             </div>
 
-            <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+ ( peliculas[4] | peliculaImagen ) +')'}">
+            <div class="col-sm-6 div-pic-2 puntero" [routerLink]="['/pelicula', peliculas[4].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[4] | peliculaImagen ) +')'}">
 
             </div>
 
@@ -44,7 +44,7 @@
 
         <div class="row">
 
-            <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url('+ ( peliculas[5] | peliculaImagen ) +')'}">
+            <div class="col-md-12 div-pic-1 puntero" [routerLink]="['/pelicula', peliculas[5].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[5] | peliculaImagen ) +')'}">
 
             </div>
 
