--- a/src/app/components/buscar/buscar.component.html
+++ b/src/app/components/buscar/buscar.component.html
@@ -13,14 +13,14 @@
 
     </div>
 
-    <div class="row">
+    <div class="row animated fadeIn fast">
         <div class="card-columns">
             <div class="card" *ngFor="let pelicula of _ps.peliculas">
                 <img class="card-img-top" [src]="pelicula | peliculaImagen" [alt]="pelicula.original_title">
                 <div class="card-body">
                     <h4 class="card-title">{{pelicula.original_title}}</h4>
                     <p class="card-text text-justify">{{pelicula.overview | slice:0:250}}</p>
-                    <button type="button" class="btn btn-primary btn-block">Ver mas ...</button>
+                    <button type="button" [routerLink]="['/pelicula', pelicula.id, 'buscar', buscar]" class="btn btn-primary btn-block">Ver mas ...</button>
                 </div>
             </div>
         </div>
