--- a/src/app/components/home/mosaico.component.html
+++ b/src/app/components/home/mosaico.component.html
@@ -9,7 +9,7 @@
         <div class="row">
 
             <div class="col-md-12 div-pic-1 puntero" [routerLink]="['/pelicula', peliculas[0].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[0] | peliculaImagen ) +')'}">
-
+                <p class="pic-titulo">{{peliculas[0].original_title}}</p>
             </div>
 
         </div>
@@ -17,11 +17,11 @@
         <div class="row">
 
             <div class="col-sm-6 div-pic-2 puntero" [routerLink]="['/pelicula', peliculas[1].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[1] | peliculaImagen ) +')'}">
-
+                <p class="pic-titulo">{{peliculas[1].original_title}}</p>
             </div>
 
             <div class="col-sm-6 div-pic-2 puntero" [routerLink]="['/pelicula', peliculas[2].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[2] | peliculaImagen ) +')'}">
-
+                <p class="pic-titulo">{{peliculas[2].original_title}}</p>
             </div>
 
         </div>
@@ -33,11 +33,11 @@
         <div class="row">
 
             <div class="col-sm-6 div-pic-2 puntero" [routerLink]="['/pelicula', peliculas[3].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[3] | peliculaImagen ) +')'}">
-
+                <p class="pic-titulo">{{peliculas[3].original_title}}</p>
             </div>
 
             <div class="col-sm-6 div-pic-2 puntero" [routerLink]="['/pelicula', peliculas[4].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[4] | peliculaImagen ) +')'}">
-
+                <p class="pic-titulo">{{peliculas[4].original_title}}</p>
             </div>
 
         </div>
@@ -45,7 +45,7 @@
         <div class="row">
 
             <div class="col-md-12 div-pic-1 puntero" [routerLink]="['/pelicula', peliculas[5].id, 'home']" [ngStyle]="{'background-image': 'url('+ ( peliculas[5] | peliculaImagen ) +')'}">
-
+                <p class="pic-titulo">{{peliculas[5].original_title}}</p>
             </div>
 
         </div>
