--- a/src/app/components/pelicula/pelicula.component.html
+++ b/src/app/components/pelicula/pelicula.component.html
@@ -20,6 +20,9 @@
                 Popularidad: <span class="badge badge-primary">{{pelicula.popularity | number:".0-0"}}/10</span>
                 <br> Voto promedio: <span class="badge badge-primary">{{pelicula.vote_average}}</span>
             </p>
+            <button [routerLink]="['/'+regresarA, busqueda]" type="button" class="btn btn-danger">
+                Regresar
+            </button>
         </div>
 
     </div>
